The lab is completed

--- a/index.ipynb
+++ b/index.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        "(3.1619764855577257, 49.84313430300858)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,13 +391,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def step_gradient_multi(b_current, ms_current, points):\n",
+    "#my version\n",
+    "def step_gradient_multi(b_current, m_current, points):\n",
     "    b_gradient = 0\n",
-    "    m_gradient = np.zeros(len(ms_current))\n",
+    "    m_gradient = np.zeros(len(m_current))\n",
     "    learning_rate = 0.1\n",
     "    n=float(len(points))\n",
     "    \n",
@@ -407,31 +408,9 @@
     "        b_gradient += -1/n*err\n",
     "        m_gradient += -1/n*points[i,1:]*err\n",
     "    new_b = b_current - learning_rate*b_gradient\n",
-    "    new_m = ms_current - learning_rate*m_gradient\n",
+    "    new_m = m_current - learning_rate*m_gradient\n",
     "    return (new_b,new_m)\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# #solution\n",
-    "# def step_gradient_multi(b_current, m_current ,points):\n",
-    "#     b_gradient = 0\n",
-    "#     m_gradient = np.zeros(len(m_current))\n",
-    "#     learning_rate = .1\n",
-    "#     N = float(len(points))\n",
-    "#     for i in range(0, len(points)):\n",
-    "#         y = points[i][0]\n",
-    "#         x = points[i][1:(len(m_current)+1)] \n",
-    "#         b_gradient += -(1/N)  * (y -  (sum(m_current * x) + b_current))\n",
-    "#         m_gradient += -(1/N) * x * (y -  (sum(m_current * x) + b_current))\n",
-    "#     new_b = b_current - (learning_rate * b_gradient)\n",
-    "#     new_m = m_current - (learning_rate * m_gradient)\n",
-    "#     return (new_b, new_m)"
    ]
   },
   {
@@ -443,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +431,7 @@
        "(0.13965491088061555, array([0.093847, 0.038762]))"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,6 +465,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set our initial step with m and b values, and the corresponding error.\n",
+    "b = 0\n",
+    "m = [0,0]\n",
+    "iterations = []\n",
+    "for i in range(500):\n",
+    "    iteration = step_gradient_multi(b, m, data)\n",
+    "    b= iteration[0]\n",
+    "    m = []\n",
+    "    for j in range(len(iteration)):\n",
+    "        m.append(iteration[1][j])\n",
+    "    iterations.append(iteration)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -494,16 +492,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.3965491088061546, array([12.286763, -16.792069]))"
+       "(1.944428332442866, array([2.995890, -3.911055]))"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
